feat: init stream route
